# rubiks-solver

./: .clang-format  .gitignore  CMakeLists.txt  README.md  convert_moves.py  convert_stickers.py  makefile  rubiks.sln  rubiks.sln.DotSettings
include/: Cube.h  Patterns.h  breadth_first_searcher.hpp  config.h.in  cube.h  cube.hpp  cube_handler.h  cube_handler.hpp  depth_first_searcher.hpp  graph_searcher.hpp  patterns.h  pch.h  thistlethwaite.h  thistlethwaite.hpp  thistlethwaite_solver.hpp  timer.hpp
res/patterns/: anaconda  checkerboard  checkerboard_in_cube  crosses  cube_in_cube  cube_in_cube_in_cube  deckerboard  flipped_tips  perpendicular_lines  python  spiral  spots  superflip  vertical_lines  wire
rubiks/: rubiks.vcxproj  rubiks.vcxproj.filters
rubiks/src/: Cube.cpp  Cube.h  Face.cpp  Face.h  Main.cpp  Patterns.cpp  Patterns.h
src/: Cube.cpp  Main.cpp  Patterns.cpp  breadth_first_searcher.cpp  cube.cpp  cube_handler.cpp  depth_first_searcher.cpp  graph_searcher.cpp  main.cpp  patterns.cpp  thistlethwaite.cpp  thistlethwaite_solver.cpp  timer.cpp
